classDiagram
    class TrendsViewModel {
      +ObservableCollection~Reading~ FilteredReadings
      +string CurrentCategory
      +bool IsBusy
      +string DisplayError
      +string TemperatureTrendSummary
      +RelayCommand SwitchCategoryCommand
      +RelayCommand ExportDataCommand
      +LoadDataAsync(string)
      +HandleError(Exception, string)
    }
    class Reading {
      +int Id
      +DateTime Timestamp
      +double Temperature
      +string Category
    }
    class TemperatureTrendGraph {
      +TemperatureTrendGraph(TrendsViewModel owner)
      +void Draw(ICanvas, RectF)
    }
    TrendsViewModel "1" o-- "*" Reading : loads data
    TrendsViewModel *-- TemperatureTrendGraph : draws trend
